typo in accuracy table fixed.

--- a/progress/sentiment.tex
+++ b/progress/sentiment.tex
@@ -51,13 +51,13 @@ We ran three different classification techniques on the data, including Ridge Cl
 
 \begin{table}%
 \centering
-\begin{tabular}{|l|c|r|}
+\begin{tabular}{|l|c|c|}
 \hline
-Model & Test Error & Dev Error \\
-\hline
-Ridge Classifier & $0.914$ & $0.905$ \\
+Model & Test Accuracy & Dev Accuracy \\
 \hline
 Bernoulli NB & $0.709$ & $0.715$ \\
+\hline
+Ridge Classifier & $0.914$ & $0.905$ \\
 \hline
 LinearSVC & $0.956$ & $0.951$ \\
 \hline
